Update Dockerfile to make resulting docker image smaller